syntax = "proto3";
package db;

message User {
    string Uuid = 1;
    int32 Level = 2;
    int32 Exp = 3;
    string Name = 4;
    bool Online = 5;
}

message Equip {
    string Uuid = 1;
    int32 ConfId = 2;
    int32 level = 3;
}

message Item {
    int32 ConfId = 1;
    int32 Amount = 2;
}

message Building {
    int32 ConfId = 1;
    int32 Pos = 2;
    int32 Level = 3;
}

message PlayerData {
    User User = 1;
    repeated Equip Equips = 2;
    repeated Item Items = 3;
}
